[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Saad Moazzam"]

[dependencies]
rusqlite = "0.34.0"
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
hyper = { version = "1.4.0", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
