[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Saad Moazzam"]

[dependencies]
axum = "0.6.20"
hyper = { version = "1.6.0", features = ["full"] }
rusqlite = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.2"
